Fix size of editor div force vertical scroll bars and horizontal line wrapping

--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ footer {
 
 .editor {
   width: 45%;
+  max-height: 100vh;
 }
 
 .displaywrapper {
